@@ -1,3 +1,8 @@
+2001-02-12  Philip Blundell  <pb@futuretv.com>
+
+	* config/tc-arm.c (do_ldst): Improve warnings for unpredictable
+	ldrt/strt instructions.
+
 Mon Feb 12 17:44:08 CET 2001  Jan Hubicka  <jh@suse.cz>
 
 	* tc-i386.c (i386_displacement): Fix handling of
